--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<div class="container-fluid">
+  <div class="page-header">
+    <h1 id="title">Meetup Ideas</h1>
+  </div>
 
 {{outlet}}
+</div>
